Bug 298375 - drawWindow() reverses red and blue channels in 16 bit color.   Return correct pixel format information for color depth < 32 on Windows.   r+sr=roc.